# mocha

./: Cargo.toml  LICENSE  README.md  docs.md  license  readme.md
crates/cargo/: Cargo.toml
crates/cargo/src/: lib.rs
crates/init/: Cargo.toml
crates/init/src/: main.rs
crates/linux/: Cargo.toml
crates/linux-syscall/: Cargo.toml
crates/linux-syscall/examples/: hello.rs
crates/linux-syscall/src/: error.rs  id.rs  lib.rs  macros.rs  traits.rs
crates/linux/examples/: remote_strings.rs  restart.rs  seccomp.rs
crates/linux/src/: efi.rs  fd.rs  lib.rs  power.rs  process.rs  seccomp.rs  util.rs
crates/linux/src/seccomp/: bpf.rs  c.rs
crates/loopy/: Cargo.toml  readme.md
crates/loopy/examples/: hello.rs
crates/loopy/src/: lib.rs  os.rs
crates/mocha-init/: Cargo.toml
crates/mocha-init/src/: backoff.rs  diagnostic.rs  main.rs  service.rs  settings.rs  signal.rs
crates/mocha-os/: Cargo.toml
crates/mocha-os/src/: device.rs  diagnostic.rs  lib.rs  loop_control.rs  module.rs  mount.rs  process.rs  util.rs  virtual_console.rs
crates/mocha-os/src/loop_control/: c.rs
crates/mocha-os/src/process/: seccomp.rs
crates/mocha-os/src/process/seccomp/: bpf.rs  c.rs
crates/mocha-settings/: Cargo.toml
crates/mocha-settings/src/: main.rs
crates/mocha-std/: Cargo.toml
crates/mocha-std/examples/: restart-to-firmware.rs  restart.rs
crates/mocha-std/src/: array.rs  device.rs  env.rs  ffi.rs  lib.rs  path.rs  string.rs  sys.rs  vec.rs
crates/mocha-std/src/array/: os_string.rs  path_buf.rs  vec.rs
crates/mocha-std/src/env/: language.rs
crates/mocha-std/src/ffi/: os_string.rs
crates/mocha-std/src/sys/: linux.rs
crates/mocha-std/src/sys/linux/: efi.rs  power.rs
crates/mocha_cargo/: Cargo.toml  dump.rs
crates/mocha_cargo/src/: error.rs  lib.rs
crates/mocha_fs/: Cargo.toml
crates/mocha_fs/src/: lib.rs  path.rs  permissions.rs  read_dir.rs
crates/mocha_ident/: Cargo.toml
crates/mocha_ident/examples/: hello.rs
crates/mocha_ident/src/: lib.rs  macros.rs  spec.rs
crates/mocha_image/: Cargo.toml
crates/mocha_image/src/: lib.rs
crates/mocha_progress/: Cargo.toml
crates/mocha_progress/src/: lib.rs
crates/mocha_target/: Cargo.toml
crates/mocha_target/src/: part.rs
crates/mocha_utils/: Cargo.toml
crates/mocha_utils/examples/: curl.rs  id.rs
crates/mocha_utils/src/: artifact.rs  lib.rs  policy.rs  process.rs
crates/mocha_utils/src/process/: policy.rs  sys.rs
crates/mocha_zig/: Cargo.toml
crates/mocha_zig/src/: main.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/pal/: Cargo.toml
crates/pal/src/: lib.rs  loop_device.rs  modem.rs
crates/pal/src/loop_device/: c.rs  ioctl.rs
crates/pal/src/modem/: c.rs  ioctl.rs
crates/platform/: Cargo.toml
crates/platform/examples/: hello.rs
crates/platform/src/: ffi.rs  fs.rs  io.rs  lib.rs
crates/platform/src/fs/: kind.rs  resolve_options.rs  wrap.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs  main.rs
crates/radio/: Cargo.toml  README.md
crates/radio-common/: Cargo.toml
crates/radio-common/src/: channel.rs  codec.rs  device.rs  firmware.rs  header.rs  inner.rs  ipc.rs  lib.rs  message.rs
crates/radio-ctl/: Cargo.toml
crates/radio-ctl/src/: main.rs
crates/radio-firmware/: Cargo.toml
crates/radio-firmware/src/: main.rs
crates/radio/src/: main.rs
crates/rune/: Cargo.toml
crates/rune/crates/rune-content/: Cargo.toml
crates/rune/crates/rune-content/src/: lib.rs
crates/rune/crates/rune-media/: Cargo.toml
crates/rune/crates/rune-media/src/: error.rs  main.rs
crates/rune/examples/: hello.rs
crates/rune/src/: backend.rs  element.rs  lib.rs  style.rs  text.rs  util.rs
crates/rune/src/backend/: egui.rs  mock.rs
crates/rune/src/backend/egui/: conversion.rs  interface.rs  text.rs
crates/rune/src/element/: span.rs
crates/rune/src/text/: hyperlink.rs  id.rs  macros.rs  renderer.rs  with_color.rs
crates/seccomp/: Cargo.toml
crates/seccomp/src/: lib.rs
crates/shell/: Cargo.toml
crates/sixel/: Cargo.toml
crates/sixel/examples/: ratatui.rs  sample.rs
crates/sixel/src/: internal.rs  lib.rs  main.rs  pixel.rs  rows_n.rs  transpose.rs  widget.rs
crates/spec/: Cargo.toml
crates/spec/src/: main.rs
crates/string_map/: Cargo.toml
crates/string_map/examples/: hello.rs
crates/string_map/src/: fst_iter.rs  iter.rs  key.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: chroot.rs  echo.rs  env.rs  generate_completion.rs  main.rs  util.rs  yes.rs
crates/video/: Cargo.toml
crates/video/src/: error.rs  frame.rs  main.rs
crates/video/src/util/: polyfill.rs
crates/video/src/util/polyfill/: array_chunks.rs  array_chunks_mut.rs
docs/: spec.md
examples/: generate.rs
src/: args.rs  artifact.rs  atom.rs  device.rs  display.rs  error.rs  framebuffer.rs  fs.rs  image.rs  index.rs  lib.rs  main.rs  milk.rs  package.rs  process.rs  tui.rs
