[package]
name = "radiod"
version = "0.0.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
radio-common = { version = "0.0.0", path = "crates/radio-common", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter"] }

[workspace]
members = ["crates/*"]
