[package]
name = "linux-syscall"
version = "0.0.0"
edition = "2021"

[dependencies]
linux-raw-sys = { version = "0.4.5", default-features = false, features = ["errno", "general", "no_std"] }
nix = { version = "0.27.1", default-features = false, optional = true }
rustix = { version = "0.38.11", default-features = false, optional = true }

[features]
std = []
