[package]
name = "linux"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.4.0", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1.14.0", default-features = false, features = ["derive"] }
libc = { version = "0.2.147", default-features = false }
linux-syscall = { version = "0.0.0", path = "../linux-syscall", default-features = false, features = ["std"] }
memoffset = { version = "0.9.0", default-features = false }
nix = { version = "0.27.1", default-features = false, features = ["ioctl"] }
rustix = { version = "0.38.11", default-features = false, features = ["std", "thread"] }

[dev-dependencies]
clap = { version = "4.4.2", default-features = false, features = ["color", "derive", "env", "error-context", "help", "std", "suggestions", "unicode", "usage", "wrap_help"] }
