[package]
name = "mocha-settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1.1.6", default-features = false, features = ["serde1"] }
codespan-reporting = { version = "0.11.1", default-features = false }
ipnetwork = { version = "0.20.0", default-features = false, features = ["serde"] }
serde = { version = "1.0.190", default-features = false, features = ["derive", "std"] }
toml = { version = "0.8.6", default-features = false, features = ["display", "parse"] }
