[package]
name = "mocha_image"
version = "0.0.0"
edition = "2021"

[dependencies]
binrw = { version = "0.11.2", default-features = false, features = ["std"] }
camino = { version = "1.1.4", default-features = false }
loopy = { version = "0.0.0", path = "../loopy", default-features = false }
mocha_utils = { version = "0.0.0", path = "../mocha_utils", default-features = false }
