[package]
name = "mocha_image"
version = "0.0.0"
edition = "2021"

[dependencies]
binrw = { version = "0.11.2", default-features = false, features = ["std"] }
bitflags = { version = "2.3.1", default-features = false }
loopy = { version = "0.0.0", path = "../loopy", default-features = false }
mocha_fs = { version = "0.0.0", path = "../mocha_fs", default-features = false }
mocha_utils = { version = "0.0.0", path = "../mocha_utils", default-features = false }
rustix = { version = "0.37.19", default-features = false, features = ["fs"] }
