[package]
name = "mocha_utils"
version = "0.0.0"
edition = "2021"

[dependencies]
camino = { version = "1.1.4", default-features = false }
nix = { version = "0.26.2", default-features = false, features = ["user"] }
sc = { version = "0.2.7", default-features = false }
seccomp = { version = "0.1.2", default-features = false }
tokio = { version = "1.28.1", default-features = false, features = ["process"] }
