[package]
name = "milk-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = { version = "0.11.2", default-features = false, features = ["std"] }
loopy = { version = "0.0.0", path = "../loopy", default-features = false }
