[package]
name = "platform"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.4.2", default-features = false }
libc = { version = "0.2.153", default-features = false }
nix = { version = "0.28.0", default-features = false, features = ["fs", "user"] }
rustix = { version = "0.38.31", default-features = false, features = ["fs", "libc", "mount", "std", "thread"] }
