[package]
name = "radio-common"
version = "0.0.0"
edition = "2021"

[dependencies]
binrw = { version = "0.13.3", default-features = false, features = ["std"] }
bytes = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.4.18", default-features = false, features = ["color", "derive", "help", "std", "suggestions", "unicode", "usage"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
rustix = { version = "0.38.31", default-features = false, features = ["std"] }
serde = { version = "1.0.196", default-features = false, features = ["derive", "std"] }
tokio = { version = "1.36.0", default-features = false, features = ["fs", "io-util", "macros", "net", "rt"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["codec"] }
toml = { version = "0.8.9", default-features = false, features = ["parse"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
