[package]
name = "radio-common"
version = "0.0.0"
edition = "2021"

[dependencies]
binrw = { version = "0.13.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
pin-project = "1.1.5"
tokio = { version = "1.36.0", default-features = false, features = ["net", "rt"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["codec"] }
