[package]
name = "radio"
version = "0.0.0"
edition = "2021"

[dependencies]
radio-common = { version = "0.0.0", path = "../radio-common", default-features = false }
rustix = { version = "0.38.31", default-features = false, features = ["std"] }
tokio = { version = "1.36.0", default-features = false, features = ["fs", "io-util", "macros", "net", "rt"] }
toml = { version = "0.8.10", default-features = false, features = ["parse"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "env-filter", "time"] }
