[package]
name = "rune"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.4.0", default-features = false }
eframe = { version = "0.23.0", default-features = false, features = ["default_fonts", "wayland", "wgpu"], optional = true }

[features]
default = ["backend-egui"]
backend-egui = ["dep:eframe"]

