[package]
name = "sixel"
version = "0.0.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["std"] }
color_quant = { version = "1.1.0", default-features = false }
crossterm = { version = "0.27.0", default-features = false }
image = { version = "0.24.7", default-features = false, features = ["png"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_std"] }
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
