[package]
name = "mocha"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = { version = "4.4.8", default-features = false, features = ["color", "derive", "env", "error-context", "help", "std", "suggestions", "unicode", "usage", "wrap_help"] }
clap_complete = { version = "4.4.4", default-features = false }
libc = { version = "0.2.150", default-features = false }
memchr = { version = "2.6.4", default-features = false }
