[package]
name = "video"
version = "0.0.0"
edition = "2021"

[dependencies]
ffimage = { version = "0.9.0", default-features = false }
ffimage_yuv = { version = "0.9.0", default-features = false }
ffmpeg = { version = "1.2.2", package = "ffmpeg-the-third", default-features = false, features = ["codec", "device", "filter", "format", "non-exhaustive-enums", "software-resampling", "software-scaling"] }
icy_sixel = { version = "0.1.1", default-features = false }
image = { version = "0.24.7", default-features = false }
palette = { version = "0.7.3", default-features = false, features = ["approx", "std"] }
yuv = { version = "0.1.5", default-features = false }
